package com.nihaskalam.movies.core.util

object TestTags {

    const val MOVIE_ITEM = "MOVIE_ITEM"
    const val PROGRESS_INDICATOR = "PROGRESS_INDICATOR"
    const val MOVIE_IMAGE = "MOVIE_IMAGE"
    const val SEARCH_TEXT_FIELD = "SEARCH_TEXT_FIELD"
}