...
        shape = CircleShape
    ) {
        Icon(
            imageVector = if (state.movie?.isFavourite
                    ?: isLiked
            ) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
            contentDescription = "Favorite"
        )
    }
}
